--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -410,4 +410,9 @@
     <!-- Enable swipe up gesture (disabled by default) -->
     <bool name="config_swipe_up_gesture_setting_available">true</bool>
 
+    <!-- Some P goodies -->
+    <bool name="config_smart_battery_available">true</bool>
+    <dimen name="config_dialogCornerRadius">8.0dip</dimen>
+    <dimen name="config_buttonCornerRadius">4.0dip</dimen>
+
 </resources>
